# terrafirmacraft_anvil

./: .clang-format  CMakeLists.txt  NOTES.md  README  README.md  config.json  plans.json
data/: plans.json
src/: AnvilChainsGetter.cpp  AnvilChainsGetter.hpp  Config.cpp  Config.hpp  FindTechniques.cpp  FindTechniques.hpp  MainWindow.cpp  MainWindow.hpp  Plans.cpp  Plans.hpp  Rule.cpp  Rule.hpp  ScanImage.cpp  ScanImage.hpp  Technique.cpp  Technique.hpp  all.cpp  anvil_chains.cpp  anvil_chains.hpp  anvil_chains_generator.cpp  get_last_file.cpp  get_last_file.hpp  increment.cpp  increment.hpp  main.cpp  png.cpp  png.hpp  utils.hpp
src/iter1/: 100.txt  130.txt  148.txt  151.txt  all.txt
src/iter2/: 100.txt  130.txt  148.txt  151.txt  all.txt
